sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/DW_Order__c.object-meta.xml
<CustomObject>
    <label>DW Order</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>DW Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DW Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>