sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DW Orders</relationshipLabel>
    <relationshipName>DW_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>