sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/DW_Account__c.field-meta.xml
<CustomField>
    <fullName>DW_Account__c</fullName>
    <label>DW Account</label>
    <referenceTo>DW_Account__c</referenceTo>
    <relationshipLabel>DW Orders</relationshipLabel>
    <relationshipName>DW_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>