sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Executed_When__c.field-meta.xml
<CustomField>
    <fullName>Executed_When__c</fullName>
    <defaultValue>"Not Executed"</defaultValue>
    <label>Executed When</label>
    <length>30</length>
    <type>Text</type>
</CustomField>