sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Expires_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Expires_Time_Stamp__c</fullName>
    <label>Expires Time Stamp</label>
    <length>25</length>
    <type>Text</type>
</CustomField>