sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Instrument_ID__c.field-meta.xml
<CustomField>
    <fullName>Instrument_ID__c</fullName>
    <label>Instrument ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>