sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Name__c</fullName>
    <label>Instrument Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>