sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Instrument_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Symbol__c</fullName>
    <label>Instrument Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>