sfdx-source/isvte_falcon/main/default/objects/DW_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>